--- a/pdd/node/ucl/pdd/chrome/options.html
+++ b/pdd/node/ucl/pdd/chrome/options.html
@@ -14,6 +14,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="options.js"></script>
+  <script src="options.bundle.js"></script>
 </body>
 </html>
