--- a/pdd/node/ucl/pdd/chrome/options.html
+++ b/pdd/node/ucl/pdd/chrome/options.html
@@ -9,7 +9,7 @@
       width: 700px;
       height: 600px;
       margin: auto;
-      overflow: scroll;
+      overflow: auto;
     }
   </style>
 </head>
