--- a/pdd/node/ucl/pdd/chrome/options.html
+++ b/pdd/node/ucl/pdd/chrome/options.html
@@ -5,9 +5,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <style>
     #app {
-      padding: 0 10px 0 10px;
+      padding: 10px;
       width: 700px;
-      height: 600px;
       margin: auto;
       overflow: auto;
     }
