--- a/pdd-dashboard/src/main/resources/index.html
+++ b/pdd-dashboard/src/main/resources/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="index.bundle.js"></script>
+    <script type="text/javascript" src="main.bundle.js"></script>
   </body>
 </html>
